# pzoj-contest

./: .deepsource.toml  .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  todo  update.sh
client/: CMakeLists.txt  package-lock.json
client/src/: asm.js
client/src/components/: CodeEditor.jsx  Footer.jsx  Leaderboard.jsx  Navbar.jsx  ProblemStatement.jsx  ProblemSubmissions.jsx  Table.jsx
client/src/components/button/: DangerButton.jsx  PrimaryButton.jsx  SecondaryButton.jsx
client/src/pages/: _app.js  about.jsx  account.jsx  contest.jsx  index.jsx  liveleaderboard.jsx
client/src/pages/problems/: [problemId].jsx  index.jsx
contests/: README.md
judging-backend/: CMakeLists.txt  README.md  checkers.cpp  checkers.hpp  main.cpp  syscalls.h
scripts/: host.sh
web-backend/: CMakeLists.txt  admin.html  db.db  index.js  interactor.js  package-lock.json
